# docs/swagger.yaml
@@ -41,6 +41,19 @@ definitions:
     - is_active
     - target_id
     type: object
+  reqmodel.CreateDiscountTransactionTarget:
+    properties:
+      discount_id:
+        type: string
+      is_active:
+        type: boolean
+      max_total_quota:
+        type: integer
+    required:
+    - discount_id
+    - is_active
+    - max_total_quota
+    type: object
   reqmodel.CreatePost:
     properties:
       content:
@@ -91,6 +104,15 @@ definitions:
     - discount_id
     - is_active
     - target_id
+    type: object
+  reqmodel.UpdateDiscountTransactionTarget:
+    properties:
+      discount_id:
+        type: string
+      is_active:
+        type: boolean
+      max_total_quota:
+        type: integer
     type: object
   reqmodel.UpdatePost:
     properties:
@@ -422,6 +444,191 @@ paths:
       summary: Update Discount Product Target
       tags:
       - Discount Product Target
+  /ndi/discount-transaction:
+    get:
+      description: Get all discount transaction targets
+      parameters:
+      - description: Search keyword
+        in: query
+        name: search
+        type: string
+      - description: Page Number
+        in: query
+        name: page
+        type: integer
+      - description: Page Size
+        in: query
+        name: size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Discount transaction targets retrieved successfully
+          schema:
+            $ref: '#/definitions/resmodel.DatasResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "404":
+          description: Discount transaction targets not found
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+      security:
+      - ApiKeyAuth: []
+      summary: List Discount Transaction Target
+      tags:
+      - Discount Transaction Target
+    post:
+      consumes:
+      - application/json
+      description: Create a new discount transaction target
+      parameters:
+      - description: User ID to check
+        in: header
+        name: X-Auth-User-Id
+        required: true
+        type: string
+      - description: Create discount transaction target
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/reqmodel.CreateDiscountTransactionTarget'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Discount transaction target created
+          schema:
+            $ref: '#/definitions/resmodel.NoDataResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+      security:
+      - ApiKeyAuth: []
+      summary: Create Discount Transaction Target
+      tags:
+      - Discount Transaction Target
+  /ndi/discount-transaction/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a discount transaction target
+      parameters:
+      - description: User ID to check
+        in: header
+        name: X-Auth-User-Id
+        required: true
+        type: string
+      - description: Discount Transaction Target ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Discount transaction target deleted
+          schema:
+            $ref: '#/definitions/resmodel.NoDataResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete Discount Transaction Target
+      tags:
+      - Discount Transaction Target
+    get:
+      description: Get a discount transaction target by its ID
+      parameters:
+      - description: Discount Transaction Target ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Discount transaction target retrieved successfully
+          schema:
+            $ref: '#/definitions/resmodel.DataResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "404":
+          description: Discount transaction target not found
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+      security:
+      - ApiKeyAuth: []
+      summary: Get Discount Transaction Target By ID
+      tags:
+      - Discount Transaction Target
+    put:
+      consumes:
+      - application/json
+      description: Update an existing discount transaction target
+      parameters:
+      - description: User ID to check
+        in: header
+        name: X-Auth-User-Id
+        required: true
+        type: string
+      - description: Discount Transaction Target ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update discount transaction target
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/reqmodel.UpdateDiscountTransactionTarget'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Discount transaction target updated
+          schema:
+            $ref: '#/definitions/resmodel.NoDataResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/utils.RequestError'
+      security:
+      - ApiKeyAuth: []
+      summary: Update Discount Transaction Target
+      tags:
+      - Discount Transaction Target
   /ndi/discount/{id}:
     delete:
       consumes:
